パラメーターで受け取るよう修正
